--- a/RecipeFinder/styles.css
+++ b/RecipeFinder/styles.css
@@ -64,3 +64,9 @@ li {
     width: 100%;
     border-radius: 3px;
 }
+
+#loading {
+    display: none;
+    text-align: center;
+    margin: 10px 0;
+}
